hphp/hack/test/typecheck/array_append_vector.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

function test(Vector<int> $vs): void {
  $vs[] = 'foo';
}
